# keystone-call-of-cats

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  macos_build.yml  windows_build.yml
.lsp/.cache/: db.transit.json
adapter/: Cargo.toml
adapter/src/: assets_loader.rb  assets_loader.rs  event_publisher.rs  file_score_repo.rs  lib.rs
adapter/src/assets_loader/: event.rs
app/: Cargo.toml
app/assets/scenes/: load_scene_example.scn.ron
app/src/: main.rs
assets/: fonts  images  tiled  tilemaps
assets/chunk_grammar_map/: tutorial.ron
assets/locales/en-US/: main.ftl  main.ftl.ron  stages.ftl
assets/locales/ja-JP/: main.ftl  main.ftl.ron  stages.ftl  tutorials.ftl
assets/locales/zh-Hans/: main.ftl  main.ftl.ron  stages.ftl
assets/stages/: catalog.ron  list.ron  stage-1.ron  stage-10.ron  stage-11.ron  stage-12.ron  stage-13.ron  stage-14.ron  stage-2.ron  stage-22.ron  stage-3.ron  stage-4.ron  stage-5.ron  stage-6.ron  stage-7.ron  stage-8.ron  stage-9.ron
core/: Cargo.toml
core/src/: boundary.rs  lib.rs
core/src/domain/: mod.rs  player.rs
infra/src/: assets_loader.rb  camera.rs  game_state.rs  lib.rs  visibility.rs
keystone-cc-app/: Cargo.toml
keystone-cc-app/src/: events.rs  main.rs  resources.rs
keystone-cc-app/src/plugins/: ai_plugin.rs
keystone-cc-app/src/systems/: ai_system.rs  scoring_system.rs
keystone-cc-core/src/domain/: mod.rs  player.rs  scoring.rs
keystone-cc-infra/: Cargo.toml
keystone-cc-infra/src/: lib.rs
launcher/: .gitignore  Cargo.toml
launcher/src/: main.rs
plugins/: Cargo.toml
plugins/src/: assets_loader.rs  design_resolution.rs  lib.rs
scenes/: Cargo.toml
scenes/src/: assets.rs  lib.rs
scenes/src/boot/: mod.rs  systems.rs
scenes/src/title/: mod.rs  systems.rs
scripts/: build_macos.sh  deploy_itch.sh  export_ftl.sh  generate_ico.py
src/: config.rs  main.rs
src/adapter/: event_publisher.rs  file_score_repo.rs  game_state.rs  mod.rs  mode.rs
src/application/: game_state.rs  launch_profile.rs  mod.rs  stage_progress.rs  steam.rs
src/application/ports/: file_storage.rs  mod.rs  stage_repository.rs
src/application/usecase/: mod.rs  stage_catalog_usecase.rs  stage_progress_usecase.rs  state.rs
src/core/: boundary.rs
src/core/domain/: chunk_grammar_map.rs  mod.rs  player.rs  script.rs  steam.rs
src/domain/: mod.rs  stage.rs  stage_progress.rs
src/infrastructure/: mod.rs  steam.rs
src/infrastructure/engine/: design_resolution.rs  mod.rs  script.rs  steam.rs  (+1 more)
src/plugins/: assets.rs  assets_loader.rs  design_resolution.rs  mod.rs  script.rs  scripts.rs  settings.rs  stage.rs  steam.rs  tiled.rs  visibility.rs
src/presentation/: mod.rs
src/resources/: asset_store.rs  chunk_grammar_map.rs  design_resolution.rs  game_state.rs  launch_profile.rs  locale_resources.rs  mod.rs  settings.rs  stage_catalog.rs  stage_progress.rs  stage_scripts.rs  steam_client.rs  stone_type.rs  tiled.rs  visibility.rs
src/scenes/: assets.rs  audio.rs  mod.rs
src/systems/: mod.rs
src/util/: font.rs  localization.rs  mod.rs  script_types.rs
tools/ftl_sheet_exporter/: Cargo.toml  README.md
tools/ftl_sheet_exporter/src/: main.rs
(+73 files in other folders)
