[package]
name = "keystone-cc"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_ecs = "0.17.2"
bevy_asset_loader = "0.23.0"
bevy_egui = "0.38.0"
bevy_render = "0.17.2"
bevy_camera = "0.17.2"
tiled = "0.15.0"
avian2d = "0.4.0"
rhai = "1.23.4"

[package.metadata.bundle.mac]
identifier = "com.meowtaverse-games.com.keystone-cc"
