[package]
name = "keystone-cc"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["wav"]}
bevy_ecs = "0.17.3"
bevy_asset_loader = "0.23.0"
bevy_egui = "0.38.0"
bevy_render = "0.17.3"
bevy_camera = "0.17.3"
bevy_fluent = "0.13.0"
avian2d = "0.4.1"
rhai = { version = "1.23.6", features = ["sync"] }
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
steamworks = { version = "0.12.2", optional = true }
thiserror = "2.0.17"
fluent_content = "0.0.5"
unic-langid = { version = "0.9.4", features = ["macros"] }

[features]
default = ["steam", "experimental"]
steam = ["dep:steamworks"]
experimental = []

[package.metadata.bundle.mac]
identifier = "com.meowtaverse-games.com.keystone-cc"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
