[package]
name = "keystone-cc"
version = "0.1.0"
edition = "2024"

[dependencies]
keystone-cc-core = { path = "../core" }
keystone-cc-adapter = { path = "../adapter" }
keystone-cc-plugins = { path = "../plugins" }
keystone-cc-scenes = { path = "../scenes" }
bevy = { workspace = true }

[package.metadata.bundle.mac]
identifier = "com.meowtaverse-games.com.keystone-cc"
