[package]
name = "ftl_sheet_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
yup-oauth2 = { version = "12.1.1" }
urlencoding = "2.1"
dotenvy = "0.15"
